--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html> #declares this is an HTML doc
+<!DOCTYPE html> 
+<!--declares this is an HTML doc -->
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Anamaria Costache </h1>
+<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. </p>
 </body>
 </html>
