--- a/index.html
+++ b/index.html
@@ -4,5 +4,21 @@
 <body>
 <h1>Anamaria Costache </h1>
 <p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. </p>
+
+<p>Here are my publications:</p>
+  <ul>
+    <li><a href="https://eprint.iacr.org/2015/889.pdf">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016), Anamaria Costache, Nigel P. Smart</li>    
+    <li><a href="https://eprint.iacr.org/2016/250.pdf">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
+    <li><a href="https://eprint.iacr.org/2016/1019.pdf">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) Anamaria Costache and Nigel P. Smart and Srinivas Vivek</li>
+  </ul>
+
+<p>Here are some of my talks: </p>
+<ul>
+<li>Which Somewhat Homomorphic Encryption Scheme is Best? - at CT-RSA 2016 in San Francisco, USA </li>
+<li>On Ring Learning with Errors and its uses in cryptography - at the Oxford Cryptography seminar </li>
+<li>Fixed Point Arithmetic in SHE Schemes - at the London Lattice Day in London, UK </li>
+<li>Fixed Point Arithmetic in SHE Schemes - short talk at NTNU in Trondheim, Norway </li>
+<li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
+</ul>
 </body>
 </html>
