--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <!--declares this is an HTML doc -->
 <html>
+  <link href="/style.css" type="text/css" rel="stylesheet">
 <body>
 <h1>Anamaria Costache </h1>
 <p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. </p>
