--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html> 
 <!--declares this is an HTML doc -->
 <html>
-  <link href="/style.css" type="text/css" rel="stylesheet">
+	<head>
+		<title>Anamaria Costache</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
 <body>
 <h1>Anamaria Costache </h1>
 <p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. </p>
