--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 <body>
+<div id="intro">
 <h1>Anamaria Costache </h1>
 <p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. </p>
+</div>
 
 <p>Here are my publications:</p>
   <ul>
     <li><a href="https://eprint.iacr.org/2015/889.pdf">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016), Anamaria Costache, Nigel P. Smart</li>    
     <li><a href="https://eprint.iacr.org/2016/250.pdf">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
     <li><a href="https://eprint.iacr.org/2016/1019.pdf">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) Anamaria Costache and Nigel P. Smart and Srinivas Vivek</li>
+    <li>Zero-Knowledge Proof of Decryption for FHE Ciphertexts (submitted for publication) - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
   </ul>
 
 <p>Here are some of my talks: </p>
