--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--declares this is an HTML doc -->
 <html>
 	<head>
-		<title>Anamaria Costache</title>
+		<title>Ana's Homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
