--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <!--declares this is an HTML doc -->
 <html>
-<body background="images/cuba1.jpg">
+<body background="cuba1.jpg">
 	<head>
 		<title>Ana's Homepage</title>
 		<meta charset="utf-8" />
