--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html> 
 <!--declares this is an HTML doc -->
 <html>
-<body background="cuba1.jpg">
 	<head>
 		<title>Ana's Homepage</title>
 		<meta charset="utf-8" />
@@ -10,7 +9,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 <body>
-    <!--<img src="images/cuba.jpg" alt="Cuba view" style="width:200px;height:150px;" /> -->
+    <img src="images/cuba.jpg" alt="Cuba view" style="width:300px;height:150px;" />
 <div id="intro">
 <h1>Anamaria Costache </h1>
 <p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. </p>
