--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html> 
 <!--declares this is an HTML doc -->
 <html>
+<div id="mbody">
 	<head>
 		<title>Ana's Homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/style.css" />
+		<!-- <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript> -->
 	</head>
 <body>
     <img src="images/cuba.jpg" alt="Cuba view" style="width:300px;height:150px;" />
@@ -32,4 +33,5 @@
 <li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
 </ul>
 </body>
+</div>
 </html>
