--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <!--declares this is an HTML doc -->
 <html>
-<div id="mbody">
+<div class="mbody">
 	<head>
 		<title>Ana's Homepage</title>
 		<meta charset="utf-8" />
