--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	</head>
 <body>
     <img src="images/cuba.jpg" alt="Cuba view" style="width:300px;height:150px;" />
-<div id="intro">
-<h1>Anamaria Costache </h1>
-<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. </p>
-</div>
+	<div id="intro">
+	<h1>Anamaria Costache </h1>
+	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. Previously, I was at Warwick University, from where I got an MMath. </p>
+	</div>
 
 <p>Here are my publications:</p>
   <ul>
