--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
 <p>Here are some of my talks: </p>
 <ul>
 <li>Which Somewhat Homomorphic Encryption Scheme is Best? - at CT-RSA 2016 in San Francisco, USA </li>
-<li>On Ring Learning with Errors and its uses in cryptography - at the Oxford Cryptography seminar </li>
+<li>On Ring Learning with Errors and its uses in Cryptography - at the Oxford Cryptography seminar </li>
 <li>Fixed Point Arithmetic in SHE Schemes - at the London Lattice Day in London, UK </li>
 <li>Fixed Point Arithmetic in SHE Schemes - short talk at NTNU in Trondheim, Norway </li>
 <li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
+</ul>
+
+<p>Here are the events I have attended or will attend this year:</p>
+<ul>
+<li>Crypto 2017, Santa Barbara, USA </li>
+<li>Women in Numbers 2017, Banff, Canada </li>
+<li>Eurocrypt 2017, Paris, France </li>
+<li>Financial Crypto 2017, Sliema, Malta </li>
+<li>Real World Crypto, New York City, USA </li>
 </ul>
 </body>
 </div>
