--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript> -->
 	</head>
 <body>
-    <img src="images/cuba.jpg" alt="Cuba view" style="width:300px;height:150px;" align="middle"/>
+    <img src="images/cuba.jpg" alt="Cuba view" style="width:300px;height:150px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
 	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. Previously, I was at Warwick University, from where I got an MMath. </p>
