--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     <img src="images/cuba.jpg" alt="Cuba view" style="width:300px;height:150px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. My topic of research is Fully Homomorphic Encryption. Previously, I was at Warwick University, from where I got an MMath. </p>
+	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. Previously, I was at Warwick University, from where I got an MMath. </p>
 	</div>
+<div id="research"> 
+ <p> I am interested in fully homomorphic encryption and more boradly, computing on encrypted data, lattice-based and post-quantum cryptography. Back at Warwick, I studied number nheory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
+ </p>
+ </div>
+
+ <div id="personal">
+ <p>
+ In my free time, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. The above picture was taken at Playa Larga in Cuba.
+ </p>
+ </div>
 
 <p>Here are my publications:</p>
   <ul>
