--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. Previously, I was at Warwick University, from where I got an MMath. </p>
 	</div>
 <div id="research"> 
- <p> I am interested in fully homomorphic encryption and more boradly, computing on encrypted data, lattice-based and post-quantum cryptography. Back at Warwick, I studied number nheory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
+ <p> I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. Back at Warwick, I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
  </p>
  </div>
 
