--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/cuba.jpg" alt="Cuba view" style="width:300px;height:150px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. Previously, I was at Warwick University, from where I got an MMath. </p>
+	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. Previously, I was at Warwick University, from where I got an MMath. My email is anamaria.costache@bristol.ac.uk </p>
 	</div>
 <div id="research"> 
  <p> I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. Back at Warwick, I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
