--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 	<h1>Anamaria Costache </h1>
 	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. Previously, I was at Warwick University, from where I got an MMath. My email is anamaria.costache@bristol.ac.uk. </p>
 	</div>
-<div id="research"> 
+<div class="text"> 
  <p> I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. Back at Warwick, I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
  </p>
  </div>
 
- <div id="personal">
+ <div class="text">
  <p>
- In my free time, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. The above picture was taken at Playa Larga in Cuba.
+ In my free time, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. The above picture was taken in Vinales, Cuba.
  </p>
  </div>
 
+<div class="text">
 <p>Here are my publications:</p>
   <ul>
     <li><a href="https://eprint.iacr.org/2015/889.pdf">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache, Nigel P. Smart</li>    
@@ -33,7 +34,9 @@
     <li><a href="https://eprint.iacr.org/2016/1019.pdf">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache and Nigel P. Smart and Srinivas Vivek</li>
     <li>Zero-Knowledge Proof of Decryption for FHE Ciphertexts (submitted for publication) - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
   </ul>
+  </div>
 
+<div class="text">
 <p>Here are some of my talks: </p>
 <ul>
 <li>Which Somewhat Homomorphic Encryption Scheme is Best? - at CT-RSA 2016 in San Francisco, USA </li>
@@ -42,7 +45,9 @@
 <li>Fixed Point Arithmetic in SHE Schemes - short talk at NTNU in Trondheim, Norway </li>
 <li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
 </ul>
+</div>
 
+<div class="text">
 <p>Here are the events I have attended or will attend this year:</p>
 <ul>
 <li>Crypto 2017, Santa Barbara, USA </li>
@@ -51,6 +56,7 @@
 <li>Financial Crypto 2017, Sliema, Malta </li>
 <li>Real World Crypto, New York City, USA </li>
 </ul>
+</div>
 </body>
 </div>
 </html>
