--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
  <div class="text">
  <p>
- In my free time, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. The above picture was taken in Vinales, Cuba.
+ In my free time, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. The above picture was taken in Viñales, Cuba.
  </p>
  </div>
 
