--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <img src="images/cuba2.jpg" alt="Cuba view" style="width:320px;height:240px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>Hi there! I am currently a PhD student at Bristol University, under the supervision of Nigel Smart. Previously, I was at Warwick University, from where I got an MMath. My email is anamaria.costache@bristol.ac.uk. </p>
+	<p>	Hi there! I am a PhD student at Bristol University, under the supervision of Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. My email is anamaria.costache@bristol.ac.uk. </p>
 	</div>
 <div class="text"> 
- <p> I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. Back at Warwick, I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
+ <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
  </p>
  </div>
 
  <div class="text">
  <p>
- In my free time, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. The above picture was taken in Viñales, Cuba.
+ Away from work, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. 
  </p>
  </div>
 
 <div class="text">
-<p>Here are my publications:</p>
+<p>Publications:</p>
   <ul>
     <li><a href="https://eprint.iacr.org/2015/889.pdf">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache, Nigel P. Smart</li>    
     <li><a href="https://eprint.iacr.org/2016/250.pdf">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) - Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
@@ -37,7 +37,7 @@
   </div>
 
 <div class="text">
-<p>Here are some of my talks: </p>
+<p>I have also given a number of public talks: </p>
 <ul>
 <li>Which Somewhat Homomorphic Encryption Scheme is Best? - at CT-RSA 2016 in San Francisco, USA </li>
 <li>On Ring Learning with Errors and its uses in Cryptography - at the Oxford Cryptography seminar </li>
@@ -48,7 +48,7 @@
 </div>
 
 <div class="text">
-<p>Here are the events I have attended or will attend this year:</p>
+<p>And finally, here are some of the events I have attended (or will attend) this year:</p>
 <ul>
 <li>Crypto 2017, Santa Barbara, USA </li>
 <li>Women in Numbers 2017, Banff, Canada </li>
