--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
  <div class="text">
  <p>
- Away from work, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache">reading</a> and travelling. 
+ Away from work, I enjoy bouldering, <a href="https://www.goodreads.com/user/show/23527519-ana-costache" target="_blank">reading</a> and travelling. 
  </p>
  </div>
 
 <div class="text">
 <p>Publications:</p>
   <ul>
-    <li><a href="https://eprint.iacr.org/2015/889.pdf">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache, Nigel P. Smart</li>    
-    <li><a href="https://eprint.iacr.org/2016/250.pdf">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) - Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
-    <li><a href="https://eprint.iacr.org/2016/1019.pdf">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache and Nigel P. Smart and Srinivas Vivek</li>
+    <li><a href="https://eprint.iacr.org/2015/889.pdf" target="_blank">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache, Nigel P. Smart</li>    
+    <li><a href="https://eprint.iacr.org/2016/250.pdf" target="_blank">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) - Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
+    <li><a href="https://eprint.iacr.org/2016/1019.pdf" target="_blank">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache and Nigel P. Smart and Srinivas Vivek</li>
     <li>Zero-Knowledge Proof of Decryption for FHE Ciphertexts (submitted for publication) - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
   </ul>
   </div>
