--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/cuba2.jpg" alt="Cuba view" style="width:320px;height:240px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>	Hi there! I am a PhD student at Bristol University, under the supervision of Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. My email is anamaria.costache@bristol.ac.uk. </p>
+	<p>	Hi there! I am a PhD student at Bristol University, under the supervision of Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography.</p>
 	</div>
 <div class="text"> 
  <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
@@ -56,6 +56,11 @@
 <li>Financial Crypto 2017, Sliema, Malta </li>
 <li>Real World Crypto, New York City, USA </li>
 </ul>
+</div>
+
+<div class="text">
+<p> Thank you for taking an interest! My email is anamaria.costache@bristol.ac.uk. 
+</p>
 </div>
 </body>
 </div>
