--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript> -->
 	</head>
 <body>
-    <img src="images/cuba2.jpg" alt="Cuba view" style="width:320px;height:240px;" align="right"/>
+    <img src="images/scotland.jpg" alt="Cuba view" style="width:380px;height:305px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
 	<p>	Hi there! I am a PhD student at Bristol University, under the supervision of Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography.</p>
