--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/scotland.jpg" alt="Cuba view" style="width:380px;height:305px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>	Hi there! I am a PhD student at Bristol University, under the supervision of Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography.</p>
+	<p>	Hi there! I am a PhD student at Bristol University, working with Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography.</p>
 	</div>
 <div class="text"> 
  <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. 
