--- a/index.html
+++ b/index.html
@@ -37,25 +37,36 @@
   </div>
 
 <div class="text">
-<p>I have also given a number of public talks: </p>
-<ul>
-<li>Which Somewhat Homomorphic Encryption Scheme is Best? - at CT-RSA 2016 in San Francisco, USA </li>
-<li>On Ring Learning with Errors and its uses in Cryptography - at the Oxford Cryptography seminar </li>
-<li>Fixed Point Arithmetic in SHE Schemes - at the London Lattice Day in London, UK </li>
-<li>Fixed Point Arithmetic in SHE Schemes - short talk at NTNU in Trondheim, Norway </li>
-<li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
-</ul>
+	<p>I have also given a number of public talks: </p>
+	<ul>
+		<li>Which Somewhat Homomorphic Encryption Scheme is Best? - at CT-RSA 2016 in San Francisco, USA </li>
+		<li>On Ring Learning with Errors and its uses in Cryptography - at the Oxford Cryptography seminar </li>
+		<li>Fixed Point Arithmetic in SHE Schemes - at the London Lattice Day in London, UK </li>
+		<li>Fixed Point Arithmetic in SHE Schemes - short talk at NTNU in Trondheim, Norway </li>
+		<li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
+	</ul>
 </div>
 
 <div class="text">
-<p>And finally, here are some of the events I have attended (or will attend) this year:</p>
-<ul>
-<li>Crypto 2017, Santa Barbara, USA </li>
-<li>Women in Numbers 2017, Banff, Canada </li>
-<li>Eurocrypt 2017, Paris, France </li>
-<li>Financial Crypto 2017, Sliema, Malta </li>
-<li>Real World Crypto, New York City, USA </li>
-</ul>
+	<p>I have been a reviewer or sub-reviewer for the following:</p>
+	<ul>
+		<li>PKC 2016</li>
+		<li>PKC 2017</li>
+		<li>IFIP SEC 2017</li>
+		<li>ESORICS 2017</li>
+		<li>ACM Computing Surveys</li>
+	</ul>
+</div>
+
+<div class="text">
+	<p>And finally, here are some of the events I have attended (or will attend) this year:</p>
+	<ul>
+		<li>Crypto 2017, Santa Barbara, USA </li>
+		<li>Women in Numbers 2017, Banff, Canada </li>
+		<li>Eurocrypt 2017, Paris, France </li>
+		<li>Financial Crypto 2017, Sliema, Malta </li>
+		<li>Real World Crypto, New York City, USA </li>
+	</ul>
 </div>
 </body>
 </div>
