--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <div class="text">
 	<p>And finally, here are some of the events I have attended (or will attend) this year:</p>
 	<ul>
+		<li>I will be visiting <a href="https://www.maths.ox.ac.uk/people/ali.elkaafarani" target="_blank">Ali</a> for two weeks in November, from the 6th to the 17th</li>
 		<li>Crypto 2017, Santa Barbara, USA </li>
 		<li>Women in Numbers 2017, Banff, Canada </li>
 		<li>Eurocrypt 2017, Paris, France </li>
