--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		<li>PKC 2017</li>
 		<li>IFIP SEC 2017</li>
 		<li>ESORICS 2017</li>
+		<li>EuroCrypt 2018</li>
 		<li>ACM Computing Surveys</li>
 	</ul>
 </div>
