--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 		<li>Women in Numbers 2017, Banff, Canada </li>
 		<li>Eurocrypt 2017, Paris, France </li>
 		<li>Financial Crypto 2017, Sliema, Malta </li>
+		<li>I spent a week in March with the crypto group at CWI, Amsterdam. Thank you Leo for welcoming me!</li>
+		<li>I spent a week in February with the crypto and maths group at NTNU, Trondheim. Thanks to Kristian, Gareth, Martin and Chris for welcoming me! </li>
 		<li>Real World Crypto, New York City, USA </li>
 	</ul>
 </div>
