--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="text">
 	<p>And finally, here is where I will be (or have been) this year:</p>
 	<ul>
-		<li>I will be visiting the Mathematics department at Oxford University for two weeks in November, from the 6th to the 17th</li>
+		<li>I spent two weeks visiting the Mathematics department at Oxford University in November. Thank you Ali for welcoming me!</li>
 		<li>Crypto 2017, Santa Barbara, USA </li>
 		<li>Women in Numbers 2017, Banff, Canada </li>
 		<li>Eurocrypt 2017, Paris, France </li>
