--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <div class="text">
 	<p>And finally, here is where I will be (or have been) this year:</p>
 	<ul>
+		<li>Real World Crypto 2018, Z&uuml;rich, Switzerland </li>
 		<li>I spent two weeks visiting the Mathematics department at Oxford University in November. Thank you Ali for welcoming me!</li>
 		<li>Crypto 2017, Santa Barbara, USA </li>
 		<li>Women in Numbers 2017, Banff, Canada </li>
