--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li><a href="https://eprint.iacr.org/2016/1019.pdf" target="_blank">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache and Nigel P. Smart and Srinivas Vivek</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> (pre-print) - Anamaria Costache and Nigel P. Smart</li>
-    <li><a href="https://eprint.iacr.org/2018/026.pdf" target="blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts (submitted for publication)</a> - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
+    <li><a href="https://eprint.iacr.org/2018/026.pdf" target="blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> (submitted for publication) - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
   </ul>
   </div>
 
