--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p>	Hi there! I am a PhD student at Bristol University, working with Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. My email is anamaria.costache@bristol.ac.uk.</p>
 	</div>
 <div class="text"> 
- <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. See <a target='_blank' href={require('pdfs/AnamariaCostache')} > here</a> for a full CV.
+ <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. See <a target='_blank' href={require('pdfs/AnamariaCostache.pdf')} > here</a> for a full CV.
  	<!--<a href="https://github.com/anamariacostache/anamariacostache/blob/master/pdfs/AnamariaCostache_CV.pdf">here</a> for a full CV. -->
  	
  </p>
