--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/scotland.jpg" alt="Cuba view" style="width:380px;height:305px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>	Hi there! I am a PhD student at Bristol University, working with Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. My email is anamaria.costache@bristol.ac.uk.</p>
+	<p>	Hi there! I have just completed my PhD at Bristol University, working with Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. My email is anamaria.costache1992@gmail.com .</p>
 	</div>
 <div class="text"> 
  <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. See <a href="http://nbviewer.jupyter.org/github/anamariacostache/anamariacostache/blob/master/pdfs/AnamariaCostache.pdf">here</a> for a full CV. 	
@@ -34,7 +34,8 @@
     <li><a href="https://eprint.iacr.org/2016/1019.pdf" target="_blank">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache and Nigel P. Smart and Srinivas Vivek</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> (pre-print) - Anamaria Costache and Nigel P. Smart</li>
-    <li><a href="https://eprint.iacr.org/2018/026.pdf" target="blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> (submitted for publication) - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
+    <li><a href="https://eprint.iacr.org/2018/026.pdf" target="blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> (pre-print) - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
+    <li><a href="https://eprint.iacr.org/2018/593.pdf" target="_blank">Ramanujan graphs in cryptography</a> (pre-print) - Anamaria Costache and Brooke Feigon and Kristin Lauter and Maike Massierer and and Anna Pusk&aacute;s </li>
   </ul>
   </div>
 
