--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/scotland.jpg" alt="Cuba view" style="width:380px;height:305px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>	Hi there! I have just completed my PhD at Bristol University, working with Nigel Smart. I am interested in fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. My email is anamaria.costache1992@gmail.com .</p>
+	<p>	Hi there! I work as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in privacy-preserving machine learning, fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. You can contact me at anamaria.costache1992@gmail.com .</p>
 	</div>
 <div class="text"> 
  <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. See <a href="http://nbviewer.jupyter.org/github/anamariacostache/anamariacostache/blob/master/pdfs/AnamariaCostache.pdf">here</a> for a full CV. 	
@@ -35,7 +35,8 @@
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> (pre-print) - Anamaria Costache and Nigel P. Smart</li>
     <li><a href="https://eprint.iacr.org/2018/026.pdf" target="blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> (pre-print) - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
-    <li><a href="https://eprint.iacr.org/2018/593.pdf" target="_blank">Ramanujan graphs in cryptography</a> (pre-print) - Anamaria Costache and Brooke Feigon and Kristin Lauter and Maike Massierer and and Anna Pusk&aacute;s </li>
+    <li><a href="https://eprint.iacr.org/2018/593.pdf" target="_blank">Ramanujan graphs in cryptography</a> (Research Directions in Number Theory: Women in Numbers IV, AWM Springer Series) - Anamaria Costache and Brooke Feigon and Kristin Lauter and Maike Massierer and and Anna Pusk&aacute;s </li>
+    <li><a href="https://eprint.iacr.org/2019/493.pdf" target="_blank">Homomorphic noise growth in practice: comparing BGV and FV</a> (pre-print) - Anamaria Costache, Kim Laine and Rachel Player</li>
   </ul>
   </div>
 
@@ -53,13 +54,18 @@
 <div class="text">
 	<p>I have been a reviewer or sub-reviewer for the following:</p>
 	<ul>
-		<li>PKC 2016</li>
-		<li>PKC 2017</li>
+		<li>PKC 2016, 2017</li>
 		<li>IFIP SEC 2017</li>
 		<li>ESORICS 2017</li>
-		<li>EuroCrypt 2018</li>
+		<li>EuroCrypt 2018, 2019</li>
+		<li>CCS 2019</li>
 		<li>ACM Computing Surveys</li>
 	</ul>
+</div>
+
+<div class="text">
+	<p>This year, I am also on the PC for <a href="http://imdarc.math.snu.ac.kr/MathCrypt2019/" target="_blank">MathCrypt</a>.
+	</p>
 </div>
 
 <div class="text">
