--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p>	Hi there! I work as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in privacy-preserving machine learning, fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. You can contact me at anamaria.costache1992@gmail.com .</p>
 	</div>
 <div class="text"> 
- <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups. See <a href="http://nbviewer.jupyter.org/github/anamariacostache/anamariacostache/blob/master/pdfs/AnamariaCostache.pdf">here</a> for a full CV. 	
+ <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups.  	
  </p>
  </div>
 
@@ -43,7 +43,7 @@
   <ul>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> (pre-print) - Anamaria Costache and Nigel P. Smart</li>
-    <li><a href="https://eprint.iacr.org/2018/026.pdf" target="blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
+    <li><a href="https://eprint.iacr.org/2018/026.pdf" target="_blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
     <li><a href="https://eprint.iacr.org/2019/493.pdf" target="_blank">Homomorphic noise growth in practice: comparing BGV and FV</a> - Anamaria Costache, Kim Laine and Rachel Player</li>
   </ul>
   </div>
@@ -57,6 +57,8 @@
 		<li>Fixed Point Arithmetic in SHE Schemes - short talk at NTNU in Trondheim, Norway </li>
 		<li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
 		<li>Fully Homomorphic Encryption: Possibilities and Challenges - at the University of Bucharest</li>
+		<li>Keynote talk at the <a href="http://www.humangenomeprivacy.org/2019/" target="_blank">iDASH Privacy &amp; Security Workshop 2019</a> Privacy &amp; Security Workshop 2019 - at Indiana University Bloomington</li>
+		<li>Panel discussion at the <a href="http://www.humangenomeprivacy.org/2019/" target="_blank">iDASH Privacy &amp; Security Workshop 2019</a> - at Indiana University Bloomington</li>
 	</ul>
 </div>
 
