--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<li>Fully Homomorphic Encryption: Possibilities and Challenges - at the University of Bucharest</li>
 		<li>Keynote talk at the <a href="http://www.humangenomeprivacy.org/2019/" target="_blank">iDASH Privacy &amp; Security Workshop 2019</a> Privacy &amp; Security Workshop 2019 - at Indiana University Bloomington</li>
 		<li>Panel discussion at the <a href="http://www.humangenomeprivacy.org/2019/" target="_blank">iDASH Privacy &amp; Security Workshop 2019</a> - at Indiana University Bloomington</li>
+		<li>Presented <a href="https://eprint.iacr.org/2019/947.pdf" target="_blank">nGraph-HE2</a> - <a href="http://homomorphicencryption.org/workshops/wahc19/" target="_blank">WAHC</a> workshop in London</li>
 	</ul>
 </div>
 
