--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="text">
 	<p>I have been a reviewer or sub-reviewer for the following:</p>
 	<ul>
-		<li>PKC 2016, 2017</li>
+		<li>PKC 2016, 2017, 2020</li>
 		<li>IFIP SEC 2017</li>
 		<li>ESORICS 2017</li>
 		<li>EuroCrypt 2018, 2019</li>
