no longer at ISG :( and other updates

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/scotland.jpg" alt="Cuba view" style="width:380px;height:305px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>	Hi there! I am an associate professor at NTNU and a postdoc at the ISG group at RHUL. Previously, I worked as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in privacy-preserving machine learning, fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. You can contact me at anamaria.costache1992@gmail.com .</p>
+	<p>	Hi there! I am an associate professor at NTNU and a part-time employee at Intel. Previously, I was a postdoc at the ISG group at RHUL. Before that, I worked as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in privacy-preserving machine learning, fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. You can contact me at anamaria.costache1992@gmail.com .</p>
 	</div>
 <div class="text"> 
  <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups.  	
@@ -29,13 +29,13 @@
 <div class="text">
 <p>Publications:</p>
   <ul>
-    <li><a href="https://eprint.iacr.org/2015/889.pdf" target="_blank">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache, Nigel P. Smart</li>    
-    <li><a href="https://eprint.iacr.org/2016/250.pdf" target="_blank">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) - Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
-    <li><a href="https://eprint.iacr.org/2016/1019.pdf" target="_blank">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache, Nigel P. Smart and Srinivas Vivek</li>
-    <li><a href="https://www.di.ens.fr/~minelli/docs/Barnett_etal.pdf" target="_blank">Processing Encrypted Data Using Homomorphic Encryption</a> (Data Mining with Secure Computation, SODA project 2017) - Anthony Barnett, Charlotte Bonte, Carl Bootland, Joppe W. Bos, Wouter Castryck,  Anamaria Costache, Louis Goubin, Ilia Iliashenko, Tancr&egrave;de Lepoint, Michele Minelli, Pascal Paillier, Nigel P. Smart, Frederik Vercauteren, Srinivas Vivek and Adrian Waller</li>
-    <li><a href="https://eprint.iacr.org/2018/593.pdf" target="_blank">Ramanujan graphs in cryptography</a> (Research Directions in Number Theory: Women in Numbers IV, AWM Springer Series) - Anamaria Costache, Brooke Feigon, Kristin Lauter, Maike Massierer and Anna Pusk&aacute;s </li>
-    <li><a href="https://eprint.iacr.org/2019/947.pdf" target="_blank">nGraph-HE2: A High-Throughput Framework for Neural Network Inference on Encrypted Data</a> (7th Workshop in Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography) - Fabian Boemer, Rosario Cammarota, Anamaria Costache and Casimir Wierzynski</li>
     <li><a href="https://eprint.iacr.org/2019/493.pdf" target="_blank">Evaluating the effectiveness of heuristic worst-case noise analysis in FHE</a> (European Symposium on Research in Computer Security (ESORICS) 2020) - Anamaria Costache, Kim Laine and Rachel Player</li>
+    <li><a href="https://eprint.iacr.org/2019/947.pdf" target="_blank">nGraph-HE2: A High-Throughput Framework for Neural Network Inference on Encrypted Data</a> (7th Workshop in Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography) - Fabian Boemer, Rosario Cammarota, Anamaria Costache and Casimir Wierzynski</li>
+    <li><a href="https://eprint.iacr.org/2018/593.pdf" target="_blank">Ramanujan graphs in cryptography</a> (Research Directions in Number Theory: Women in Numbers IV, AWM Springer Series) - Anamaria Costache, Brooke Feigon, Kristin Lauter, Maike Massierer and Anna Pusk&aacute;s </li>
+    <li><a href="https://www.di.ens.fr/~minelli/docs/Barnett_etal.pdf" target="_blank">Processing Encrypted Data Using Homomorphic Encryption</a> (Data Mining with Secure Computation, SODA project 2017) - Anthony Barnett, Charlotte Bonte, Carl Bootland, Joppe W. Bos, Wouter Castryck,  Anamaria Costache, Louis Goubin, Ilia Iliashenko, Tancr&egrave;de Lepoint, Michele Minelli, Pascal Paillier, Nigel P. Smart, Frederik Vercauteren, Srinivas Vivek and Adrian Waller</li>
+    <li><a href="https://eprint.iacr.org/2016/1019.pdf" target="_blank">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache, Nigel P. Smart and Srinivas Vivek</li>
+    <li><a href="https://eprint.iacr.org/2016/250.pdf" target="_blank">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) - Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
+    <li><a href="https://eprint.iacr.org/2015/889.pdf" target="_blank">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache, Nigel P. Smart</li> 
   </ul>
   </div>
 
@@ -51,15 +51,14 @@
 <div class="text">
 	<p>I have also given a number of public talks: </p>
 	<ul>
-		<li>Which Somewhat Homomorphic Encryption Scheme is Best? - at CT-RSA 2016 in San Francisco, USA </li>
-		<li>On Ring Learning with Errors and its uses in Cryptography - at the Oxford Cryptography seminar </li>
-		<li>Fixed Point Arithmetic in SHE Schemes - at the London Lattice Day in London, UK </li>
-		<li>Faster Homomorphic Evaluation of Discrete Fourier Transforms - at Financial Crypto 2017 in Sliema, Malta </li>
-		<li>Fully Homomorphic Encryption: Possibilities and Challenges - at the University of Bucharest</li>
+		<li>Upcoming: <a href="https://cryptography.tii.ae/news/crc-seminar-series-associate-professor-anamaria-costache" target="_blank">Fully Homomorphic Encryption: Advances and Challenges</a> - at CRC Seminar Series, TII (virtual) </li>
+		<li>Fully Homomorphic Encryption: Advances and Remaining Challenges - at the ISG Research seminar, RHUL, UK </li>
+		<li>Presented <a href="https://eprint.iacr.org/2019/947.pdf" target="_blank">nGraph-HE2</a> - <a href="http://homomorphicencryption.org/workshops/wahc19/" target="_blank">WAHC</a> workshop in London</li>
 		<li>Keynote talk at the <a href="http://www.humangenomeprivacy.org/2019/" target="_blank">iDASH Privacy &amp; Security Workshop 2019</a> Privacy &amp; Security Workshop 2019 - at Indiana University Bloomington</li>
 		<li>Panel discussion at the <a href="http://www.humangenomeprivacy.org/2019/" target="_blank">iDASH Privacy &amp; Security Workshop 2019</a> - at Indiana University Bloomington</li>
-		<li>Presented <a href="https://eprint.iacr.org/2019/947.pdf" target="_blank">nGraph-HE2</a> - <a href="http://homomorphicencryption.org/workshops/wahc19/" target="_blank">WAHC</a> workshop in London</li>
-		<li>Fully Homomorphic Encryption: Advances and Remaining Challenges - at the ISG Research seminar, RHUL, UK </li>
+		<li>Fixed Point Arithmetic in SHE Schemes - at the London Lattice Day in London, UK </li>
+		<li>Fully Homomorphic Encryption: Possibilities and Challenges - at the University of Bucharest</li>
+		<li>On Ring Learning with Errors and its uses in Cryptography - at the Oxford Cryptography seminar </li>
 	</ul>
 </div>
 
@@ -71,9 +70,9 @@
 	<p>Program committees: 
 	</p>
 	<ul>
-		<li><a href="http://imdarc.math.snu.ac.kr/MathCrypt2019/" target="_blank">MathCrypt19</a></li>
+		<li><a href="https://homomorphicencryption.org/workshops/wahc21/" target="_blank">WAHC 21</a></li>
 		<li><a href="https://homomorphicencryption.org/workshops/wahc20/" target="_blank">WAHC 20</a></li>
-
+		<li><a href="http://imdarc.math.snu.ac.kr/MathCrypt2019/" target="_blank">MathCrypt19</a></li>
 	</ul>
 </div>
 
