--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
 </div>
 
 <div class="text">
+	<p>This year, I am program co-chair for <a href="https://www.ntnu.edu/web/nikt2021/call-for-papers-nisk"> NIKT</a>.</p>
+</div>
+
+<div class="text">
 	<p>Program committees: 
 	</p>
 	<ul>
+		<li><a href="http://lab.algonics.net/temp/mathcrypt/mathcrypt.html" target="_blank">MathCrypt21</a></li>
 		<li><a href="https://homomorphicencryption.org/workshops/wahc21/" target="_blank">WAHC 21</a></li>
 		<li><a href="https://homomorphicencryption.org/workshops/wahc20/" target="_blank">WAHC 20</a></li>
 		<li><a href="http://imdarc.math.snu.ac.kr/MathCrypt2019/" target="_blank">MathCrypt19</a></li>
@@ -79,6 +84,7 @@
 <div class="text">
 	<p>I have been a reviewer or sub-reviewer for the following:</p>
 	<ul>
+		<li>CT-RSA 2021</li>
 		<li>PKC 2016, 2017, 2020</li>
 		<li>IFIP SEC 2017</li>
 		<li>ESORICS 2017</li>
