--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/scotland.jpg" alt="Cuba view" style="width:380px;height:305px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>	Hi there! I am an associate professor at NTNU and a part-time employee at Intel. Previously, I was a postdoc at the ISG group at RHUL. Before that, I worked as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in privacy-preserving machine learning, fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. You can contact me at anamaria.costache1992@gmail.com .</p>
+	<p>	Hi there! I am an associate professor at NTNU. Previously, I was a part-time employee at Intel. Before that, I was a postdoc at the ISG group at RHUL. Before that, I worked as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in privacy-preserving machine learning, fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. You can contact me at anamaria.costache1992@gmail.com .</p>
 	</div>
 <div class="text"> 
  <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups.  	
