--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 <div class="text">
 <p><b>Publications: </b></p>
-  <ul>
+  <ul>  	
+	<li><a href="https://eprint.iacr.org/2022/162.pdf" target="_blank">On the precision loss in approximate homomorphic encryption</a> (To appear at SAC 2023) - Anamaria Costache, Benjamin R. Curtis, Erin Hales, Sean Murphy, Tabitha Ogilvie and Rachel Player</li>
 	<li><a href="https://eprint.iacr.org/2023/104.pdf" target="_blank">Optimisations and tradeoffs for HElib</a> (CT-RSA 2023) - Anamaria Costache, Lea N&uuml;rnberger and Rachel Player</li>
 	<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-77287-1_1" target="_blank">Introduction to homomorphic encryption and schemes</a> (Protecting Privacy through Homomorphic Encryption (2022)) - Jung Hee Cheon, Anamaria Costache, Radames Cruz Moreno, Wei Dai, Nicolas Gama, Mariya Georgieva, Shai Halevi, Miran Kim, Sunwoong Kim, Kim Laine, Yuriy Polyakov and Yongsoo Song</li>
     <li><a href="https://eprint.iacr.org/2019/493.pdf" target="_blank">Evaluating the effectiveness of heuristic worst-case noise analysis in FHE</a> (European Symposium on Research in Computer Security (ESORICS) 2020) - Anamaria Costache, Kim Laine and Rachel Player</li>
@@ -45,7 +46,6 @@
 	<p><b>Pre-prints:</b></p>
   <ul>
 	<li><a href="https://eprint.iacr.org/2022/1408.pdf" target="_blank">BRAKE: Biometric Resilient Authenticated Key Exchange</a> - Pia Bauspieß, Tjerand Silde, Alexandre Tullot, Anamaria Costache, Christian Rathgeb, Jascha Kolberg and Christoph Busch</li>
-	<li><a href="https://eprint.iacr.org/2022/162.pdf" target="_blank">On the precision loss in approximate homomorphic encryption</a> - Anamaria Costache, Benjamin R. Curtis, Erin Hales, Sean Murphy, Tabitha Ogilvie and Rachel Player</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> - Anamaria Costache and Nigel P. Smart</li>
     <li><a href="https://eprint.iacr.org/2018/026.pdf" target="_blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
@@ -74,7 +74,7 @@
 </div>
 
 <div class="text">
-	<p><b>Chairing: </b>I was program co-chair for <a href="https://www.ntnu.edu/web/nikt2021/call-for-papers-nisk"> NIKT 2019</a>, as well as for Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography 2022 <a href="https://homomorphicencryption.org/workshops/wahc22/" target="_blank"> (WAHC)</a>.</p>
+	<p><b>Chairing: </b>I was/ am program co-chair for <a href="https://www.ntnu.edu/web/nikt2021/call-for-papers-nisk"> NIKT 2019</a>, as well as for Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography 2022 and 2023 <a href="https://homomorphicencryption.org/workshops/wahc22/" target="_blank"> (WAHC)</a>.</p>
 </div>
 
 
